--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 
 #package file
 *.war
-
 *.ear
 
 #kdiff3 ignore
@@ -11,12 +10,12 @@
 #maven ignore
 target/
 
-#eclipse ignore 
+#eclipse ignore
 .settings/
 .project
-.classpatch
+.classpath
 
-#idea
+#idea ignore
 .idea/
 /idea/
 *.ipr
@@ -24,7 +23,6 @@ target/
 *.iws
 
 #temp file
-
 *.log
 *.cache
 *.diff
@@ -33,3 +31,4 @@ target/
 
 #system ignore
 .DS_Store
+Thumbs.db
